Document app get endpoint
